Submit empty file inputs.  Bug 111963.  r=alexsuvalov@netscape.com, sr=jst@netscape.com